| Summary: | ASTERISK-25083: Message.c: Message channel becomes saturated with frames leading to spammy log messages | ||
| Reporter: | Jonathan Rose (jrose) | Labels: | |
| Date Opened: | 2015-05-13 15:55:42 | Date Closed: | 2015-05-14 15:21:14 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | From the original report:
>I see the messages (see attached) on the console and log after the server is running for a few days. The only way to clear them is to restart Asterisk. Then they come back a few days later. We have about 50 Digium D50's connected to this server. [2015-04-30 03:35:06] DEBUG[6922][C-00000000] channel.c: Soft-Hanging (0x20) up channel 'Message/ast_msg_queue' [2015-04-30 03:35:06] WARNING[6922][C-00000000] channel.c: Exceptionally long queue length queuing to Message/ast_msg_queue Message queue is clearly having frames queued on its read queue and is gradually becoming spammy, probably because the queue is gradually having more control frames and other special frames that aren't dealt with when flushing the queue due to having more than 128 frames in the queue. It's perfectly safe to just get rid of these frames routinely since they are never read by the Message channel anyway. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-12-19 22:19:08.822-0600 Change 4621 merged by George Joseph: MESSAGE: Flush Message/ast_msg_queue channel alert pipe. [https://gerrit.asterisk.org/4621|https://gerrit.asterisk.org/4621] By: Friendly Automation (friendly-automation) 2016-12-19 23:26:40.118-0600 Change 4627 merged by zuul: MESSAGE: Flush Message/ast_msg_queue channel alert pipe. [https://gerrit.asterisk.org/4627|https://gerrit.asterisk.org/4627] By: Friendly Automation (friendly-automation) 2016-12-20 05:30:16.050-0600 Change 4625 merged by Joshua Colp: MESSAGE: Flush Message/ast_msg_queue channel alert pipe. [https://gerrit.asterisk.org/4625|https://gerrit.asterisk.org/4625] By: Friendly Automation (friendly-automation) 2016-12-20 05:30:54.301-0600 Change 4623 merged by Joshua Colp: MESSAGE: Flush Message/ast_msg_queue channel alert pipe. [https://gerrit.asterisk.org/4623|https://gerrit.asterisk.org/4623] | ||