Message.c: Clear message channel frames on cleanup

The message channel is special channel that doesn't actually process frames.
However, certain actions can cause frames to be placed in channel's read
queue including the Hangup application which is called on the channel after
each message is processed. Since the channel will continually be reused for
many messages, it's necessary to flush these frames at some point.

ASTERISK-25083 #close
Reported by: Jonathan Rose

Change-Id: Idf18df73ccd8c220be38743335b5c79c2a4c0d0f